# ncda-extract-soil-data

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  open_ai_request.rs  open_ai_response.rs  soil_report.rs
src/resources/: ai_prompt.txt
