[package]
name = "soil_data_extractor_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
regex = "1.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
image = "0.25.2"
pdfium-render = { version = "0.8.24" }
tokio = { version = "1.39", features = ["full"] }
tokio-macros = { version = "2.4.0" }
