[package]
name = "ncda-extract-soil-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
image = "0.25"
once_cell = "1.20"
pdfium-render = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
